# Invariant

./: .dockerignore  .gitignore  Dockerfile  README.md  blog_build_plan.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
alembic/: .gitkeep  env.py
alembic/versions/: 7cf2d4ed263d_create_initial_tables.py  b1c8e2a4f6d1_add_user_id_to_comments.py
app/: auth.py  cache.py  config.py  database.py  demo_content.py  main.py  markdown.py  rate_limit.py
app/models/: __init__.py  comment.py  post.py  tag.py  user.py
app/routers/: account.py  admin.py  auth.py  posts.py
app/static/css/: .gitkeep  style.css
app/templates/: .gitkeep  admin_login.html  admin_post_form.html  base.html  index.html  login.html  post_detail.html  post_form.html  register.html
app/templates/partials/: .gitkeep  footer.html  header.html  post_card.html  sidebar.html
blog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: frontend-build-notes.md
scripts/: seed.py
tests/: conftest.py  test_app.py
