[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blog"
version = "0.1.0"
description = "FastAPI Jinja2 SSR Blog Application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "fakeredis>=2.10.0",
    "testcontainers>=3.7.0",
]
